<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WoBinsch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="Vehikel_ZF">Fürbass</string>
    <string name="alleAnzeigen">Alle Teilstrecken anzeigen</string>
    <string name="exportieren">Ausgewählte als .gpx exportieren</string>
    <string name="loeschen">Ausgewählte löschen</string>
    <string name="bis">\u0020bis\u0020</string>
    <string name="Fahrzeug">Mit</string>
    <string name="Klammerauf">\u0020(</string>
    <string name="Punkte">\u0020Messpunkte)</string>
    <string name="geschwindigkeit">Geschw.:\u0020</string>
    <string name="strecke">Strecke:\u0020</string>
    <string name="m">\u0020m\u0020</string>
    <string name="mProS">\u0020m/s</string>
    <string name="Alarm">Ankerwache</string>
    <string name="AnkerwacheNachricht">Position verändert! Ist der Anker OK?</string>
    <string name="wirklichLoeschen">Wirklich löschen?</string>
    <string name="ja">Ja</string>
    <string name="nein">Nein</string>
    <string name="alleAnzeigenKurz">Alle</string>
    <string name="exportierenKurz">Export</string>
    <string name="loeschenKurz">Löschen</string>
    <string name="msg_dateiExportiert">Datei wurde exportiert</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="kettenLaenge">Länge der Ankerkette</string>
    <string name="kettenLaengeSummary">Länge der Ankerkette für Ankerwache</string>
    <string name="signal">Signal für Ankerwache</string>
    <string name="einheit">Einheiten</string>
    <string name="leer">\u0020</string>
    <string-array name="Einheiten">
        <item>Meter, m/s</item>
        <item>Kilometer, km/h</item>
        <item>Meilen, mph</item>
        <item>Seemeilen, Knoten</item>
    </string-array>
    <string-array name="EinheitenWert">
        <item>M</item>
        <item>KM</item>
        <item>LM</item>
        <item>SM</item>
    </string-array>

</resources>

