<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.frankkuerten.wobinsch.MainActivity" >

    <item
        android:id="@+id/alleAnzeigen"
        android:orderInCategory="300"
        android:title="@string/alleAnzeigen"
        android:titleCondensed="@string/alleAnzeigenKurz"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom"/>

     <item
        android:id="@+id/loeschen"
        android:orderInCategory="200"
        android:title="@string/loeschen"
        android:titleCondensed="@string/loeschenKurz"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom"/>
     
     <item
        android:id="@+id/exportieren"
        android:orderInCategory="100"
        android:title="@string/exportieren"
        android:titleCondensed="@string/exportierenKurz"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="ifRoom"/>

</menu>
